tests/samples/negative/types/array_literal_empty_infer.ax
module array_literal_empty_infer;

fn main() -> i32 {
    let values = [];
    return 0;
}
